libast_files += [
    'path/pathaccess.c', 'path/pathbin.c', 'path/pathcanon.c', 'path/pathcat.c',
    'path/pathcd.c', 'path/pathcheck.c', 'path/pathexists.c', 'path/pathfind.c',
    'path/pathgetlink.c', 'path/pathkey.c', 'path/pathnative.c',
    'path/pathpath.c', 'path/pathposix.c',
    'path/pathprobe.c', 'path/pathprog.c', 'path/pathrepl.c',
    'path/pathsetlink.c', 'path/pathshell.c', 'path/pathstat.c',
    'path/pathtemp.c', 'path/pathtmp.c'
]
