libast_files += [ 'port/astconf.c', 'port/astcopy.c', 'port/astdynamic.c', 'port/astlicense.c', 'port/astquery.c', 'port/aststatic.c', 'port/astwinsize.c', 'port/codeset.c', 'port/iblocks.c', 'port/intercept.c', 'port/lc.c', 'port/lcgen.c', 'port/lctab.c', 'port/mc.c', 'port/mnt.c', 'port/touch.c' ]
