# The lctab.c module is unusual in that it is dynamically generated via the feature detection code.
libast_files += [
    'port/astconf.c', 'port/astdynamic.c',
    'port/astquery.c', 'port/aststatic.c',
    'port/astwinsize.c', 'port/codeset.c', 'port/iblocks.c',
    'port/intercept.c', 'port/lc.c', meson.build_root() + '/features/locales/lctab.c',
    'port/mc.c', 'port/touch.c'
]
